Jule: fix/sendmessage-access-modifier
feat: Refactor network protocol to length-prefixed frames

Refactors the client-server network protocol from a fragile newline-delimited system to a robust length-prefixed binary protocol. This resolves critical `NumberFormatException` errors and client freezes caused by network stream desynchronization.

- Implemented a symmetric length-prefixed protocol for both client and server.
- Replaced `BufferedReader` and `readLine()` with `DataInputStream` for reliable binary message parsing.
- Created a central `getNextInput()` method on the server (`LivingThing.java`) to handle framed message reading, fixing various compilation errors.
- Disabled the audio system by default as a diagnostic step to help isolate a separate client freeze issue, per user request.